syntax = "proto3";

option csharp_namespace = "RPS.Common.Grpc";

import "google/protobuf/empty.proto";

service AccountsService {
  rpc GetUser(GetUserRequest)
      returns (GetUserResponse);
}

message GetUserRequest {
  int64 user_id = 1;
}

message GetUserResponse {
  string user_name = 1;
  int64 rating = 2;
  UserStatus status = 3;
}

enum UserStatus{
    Offline = 0;
    InGame = 1;
    Spectator = 2;
    Online = 3;
}